# resolver-sdk

./: README.md  pyproject.toml
src/resolver_sdk/: __init__.py  client.py  exceptions.py  transport.py
src/resolver_sdk/resources/: __init__.py  applications.py  forms.py  lifecycle.py  objects.py  reports.py  roles.py  utility.py
src/resolver_sdk/schemas/: __init__.py  applications.py  base.py  forms.py  lifecycle.py  objects.py  reports.py  roles.py  utility.py
