[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "resolver-sdk"
version = "0.1.0"
description = "Python SDK for interacting with the Resolver API"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Jordan Smith" }
]

dependencies = [
    "requests>=2.32.0",
    "pydantic>=2.0"
]

keywords = [
    "resolver",
    "api",
    "sdk"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]